test/should_pass/basic_100.grg
actions basic_100;

rule r {
	pattern {
		x:Node -e:Edge-> y:Node --> z:Node;
	}
	replace {
		x <-:Edge- y <-- z;
	}
}

