test/should_fail/reuse_003.grg
actions reuse_003 using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		x -e:Edge-> y;
	}
	replace{
		a:NINT<y> -e-> y;
	}
}
